--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> relatório sobre trabalho no mundo </title>
+    <title>[Tema da sua base de dados]</title>
 </head>
 <body>
     <header>
-        <h1> </h1>
+        <h1>Relatório [Tema da sua base de dados]</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha escola</a>
+        </nav>
     </header>
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
+            <p class="graficos-container__texto">
+                <!-- Insira seu texto aqui -->
+            </p>
+        </section>
+    </main>
+    <footer>
+        <p>Desenvolvido por [Insira seu nome aqui]</p>
+    </footer>
 </body>
 </html>
