--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por João Pedrosa</p>
+        <p>Desenvolvido por Décio Machado</p>
     </footer>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
