--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes Sociais</title>
+    <title>Trabalho no mundo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Relatório das Redes Sociais</h1>
+        <h1>Relatório Trabalho no Mundo</h1>
         <nav>
             <a href="index.html">Mundo</a>
             <a href="#">Minha escola</a>
@@ -15,12 +16,7 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-           <!--<p class="graficos-container__texto">
-                
-                Você sabia que no mundo há um total de 7.9 milhões pessoas,onde desse total a grande maioria sendo 6 milhões tem acesso a educação ,o tempo médio para estudo  é de 4 horas por dia. Porém desse total de pessoas com educação superior é de 1.5 milhões?
-                “A educação é o caminho para atinguir o sucesso que você almeja”.
-                
-            </p>-->
+            <!-- crie os gráficos/textos aqui -->
         </section>
     </main>
     <footer>
